Fix spacing of buttons in masthead for mobile

--- a/_sass/components/_masthead.scss
+++ b/_sass/components/_masthead.scss
@@ -41,7 +41,6 @@
     border-width: 1px;
     display: inline-block;
     font-size: 1.25rem;
-    margin-right: 1rem;
     padding: 0.75rem 2rem;
 
     &:hover {
@@ -55,10 +54,6 @@
         ));
 
         text-decoration: none;
-    }
-
-    &:last-child {
-        margin-right: 0;
     }
 }
 
